--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
